--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,22 +1,23 @@
 {% form_theme registrationForm 'bootstrap_5_layout.html.twig' %}
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 {% block header %}{% endblock %}
 {% block body %}
-<div class="container col-3">
-    <h1>Register</h1>
+	<div class="container col-3">
+		<h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword, {
+		{{ form_start(registrationForm) }}
+		{{ form_row(registrationForm.username) }}
+		{{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+		{{ form_row(registrationForm.agreeTerms) }}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Register
-        </button>
-    {{ form_end(registrationForm) }}
-    </div>
+		<button class="btn btn-lg btn-primary" type="submit">
+			Register
+		</button>
+		{{ form_end(registrationForm) }}
+	</div>
 {% endblock %}
